# apip

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  api.rst  distribute.py  distribute.sh  index.rst  pyproject.toml  quickstart.rst  setup.cfg  tests.py
_build/doctrees/: index.doctree
_build/html/: .buildinfo  api.html  genindex.html  quickstart.html  searchindex.js
_build/html/interactions/: api.html
_templates/: layout.html
apip/: __init__.py  basepackage.py  client.py  errors.py  installer.py  package.py  pip.py  test.py
apip.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apip/abc/: __init__.py  basepackage.py  errors.py  installer.py
docs/: conf.py  index.rst  make.bat  requirements.txt
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/: api.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.md.txt  index.rst.txt  installation.rst.txt
docs/_build/html/_static/: language_data.js
docs/_static/: scorer.js
docs/extensions/: builder.py
extensions/: nitpick_file_ignorer.py
src/apip/: __init__.py  pip.py
src/apip/abc/: errors.py  package.py
tests/: test.py
