[metadata]
name = apip
version = 0.0.4
license = MIT License
description = An api wrapper for pip!
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/SomeHybrid/apip
keywords = pip, python, pypi, subprocess
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
