[metadata]
name = apip
version = 0.0.6
license = MIT
description = An api wrapper for pip!
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/SomeHybrid/apip
keywords = pip, python, pypi
project_urls =
    Documentation = https://apip.readthedocs.io/
    Homepage = https://github.com/SomeHybrid/apip
    Issue Tracker = https://github.com/SomeHybrid/apip/issues
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages=find:

[options.packages.find]
exclude =
    docs*
    venv*
    .idea*