[metadata]
name = apip
version = 0.2.0
license = MIT
description = An asynchronous api wrapper for pip!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SomeHybrid/apip
keywords = pip, python, pypi
project_urls =
    Documentation = https://apip.readthedocs.io/
    Homepage = https://github.com/SomeHybrid/apip
    Issue Tracker = https://github.com/SomeHybrid/apip/issues
classifiers =
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages=find:
install_requires: file: requirements.txt

[options.packages.find]
exclude =
    docs*
    venv*
    .idea*